--- a/thule-environment-provisioning/src/main/kubernetes/environments/cit/services/thule-people-service.yml
+++ b/thule-environment-provisioning/src/main/kubernetes/environments/cit/services/thule-people-service.yml
@@ -94,6 +94,25 @@ spec:
         name: cpu
         targetAverageUtilization: 80
 ---
+kind: Ingress
+apiVersion: extensions/v1beta1
+metadata:
+  annotations:
+    kubernetes.io/ingress.allow-http: "false"
+    kubernetes.io/ingress.class: nginx
+    nginx.ingress.kubernetes.io/rewrite-target: /$2
+  name: thule-people-service-ingress
+  namespace: thule
+spec:
+  rules:
+    - host: piglet
+      http:
+        paths:
+          - path: /thule-people-service(/|$)(.*)
+            backend:
+              serviceName: thule-people-service
+              servicePort: 80
+---
 kind: Service
 apiVersion: v1
 metadata:
