--- a/thule-environment-provisioning/src/main/kubernetes/environments/cit/services/thule-discovery-service.yml
+++ b/thule-environment-provisioning/src/main/kubernetes/environments/cit/services/thule-discovery-service.yml
@@ -100,6 +100,7 @@ metadata:
     kubernetes.io/ingress.allow-http: "false"
     kubernetes.io/ingress.class: nginx
     nginx.ingress.kubernetes.io/rewrite-target: /$2
+    nginx.ingress.kubernetes.io/x-forwarded-prefix: "/thule-discovery-service"
   name: thule-discovery-service-ingress
   namespace: thule
 spec:
