--- a/thule-discovery-service/src/main/resources/config/application.yml
+++ b/thule-discovery-service/src/main/resources/config/application.yml
@@ -24,7 +24,9 @@ management:
 
 # Server configuration
 server:
-  forward-headers-strategy: native
+  servlet:
+    context-path: /${spring.application.name}
+
 
 # Spring boot configuration
 spring:
