--- a/thule-environment-provisioning/src/main/kubernetes/environments/cit/services/thule-discovery-service.yml
+++ b/thule-environment-provisioning/src/main/kubernetes/environments/cit/services/thule-discovery-service.yml
@@ -99,8 +99,7 @@ metadata:
   annotations:
     kubernetes.io/ingress.allow-http: "false"
     kubernetes.io/ingress.class: nginx
-    nginx.ingress.kubernetes.io/rewrite-target: /$2
-    nginx.ingress.kubernetes.io/x-forwarded-prefix: "/thule-discovery-service"
+    nginx.ingress.kubernetes.io/rewrite-target: /thule-discovery-service/$2
   name: thule-discovery-service-ingress
   namespace: thule
 spec:
