--- a/thule-discovery-service/src/main/resources/config/application.yml
+++ b/thule-discovery-service/src/main/resources/config/application.yml
@@ -22,6 +22,10 @@ management:
     health:
       show-details: ALWAYS
 
+# Server configuration
+server:
+  forward-headers-strategy: framework
+
 # Spring boot configuration
 spring:
   application:
