--- a/thule-email-service/src/main/resources/config/application.yml
+++ b/thule-email-service/src/main/resources/config/application.yml
@@ -20,6 +20,10 @@ security:
       jwt:
         key-value: secret
 
+# Server configuration
+server:
+  forward-headers-strategy: framework
+
 # Spring boot configuration
 spring:
   application:
