--- a/thule-environment-provisioning/src/main/kubernetes/environments/cit/services/thule-configuration-service.yml
+++ b/thule-environment-provisioning/src/main/kubernetes/environments/cit/services/thule-configuration-service.yml
@@ -107,6 +107,7 @@ metadata:
     kubernetes.io/ingress.allow-http: "false"
     kubernetes.io/ingress.class: nginx
     nginx.ingress.kubernetes.io/rewrite-target: /$2
+    nginx.ingress.kubernetes.io/x-forwarded-prefix: "/thule-configuration-service"
   name: thule-configuration-service-ingress
   namespace: thule
 spec:
