--- a/thule-environment-provisioning/src/main/kubernetes/environments/cit/services/thule-admin-service.yml
+++ b/thule-environment-provisioning/src/main/kubernetes/environments/cit/services/thule-admin-service.yml
@@ -100,6 +100,7 @@ metadata:
     kubernetes.io/ingress.allow-http: "false"
     kubernetes.io/ingress.class: nginx
     nginx.ingress.kubernetes.io/rewrite-target: /$2
+    nginx.ingress.kubernetes.io/x-forwarded-prefix: "/thule-admin-service"
   name: thule-admin-service-ingress
   namespace: thule
 spec:
@@ -111,25 +112,6 @@ spec:
             backend:
               serviceName: thule-admin-service
               servicePort: 80
----
-kind: Ingress
-apiVersion: extensions/v1beta1
-metadata:
-  annotations:
-    kubernetes.io/ingress.allow-http: "false"
-    kubernetes.io/ingress.class: nginx
-    nginx.ingress.kubernetes.io/rewrite-target: /$2
-  name: thule-admin-service-ingress2
-  namespace: default
-spec:
-  rules:
-    - host: piglet
-      http:
-        paths:
-          - path: /echoserver(/|$)(.*)
-            backend:
-              serviceName: echoserver
-              servicePort: 8080
 ---
 kind: Service
 apiVersion: v1
