--- a/thule-configuration-service/build.gradle
+++ b/thule-configuration-service/build.gradle
@@ -62,6 +62,7 @@ dependencyManagement {
 
 dependencies {
     annotationProcessor("org.projectlombok:lombok")
+    annotationProcessor("org.springframework.boot:spring-boot-configuration-processor")
 
     compileOnly("org.projectlombok:lombok")
 
