--- a/thule-email-service/build.gradle
+++ b/thule-email-service/build.gradle
@@ -38,6 +38,7 @@ dependencyManagement {
 
 dependencies {
     annotationProcessor("org.projectlombok:lombok")
+    annotationProcessor("org.springframework.boot:spring-boot-configuration-processor")
 
     compileOnly("org.projectlombok:lombok")
 
