--- a/thule-people-service/build.gradle
+++ b/thule-people-service/build.gradle
@@ -47,6 +47,7 @@ dependencyManagement {
 
 dependencies {
     annotationProcessor("org.projectlombok:lombok")
+    annotationProcessor("org.springframework.boot:spring-boot-configuration-processor")
 
     compileOnly("org.projectlombok:lombok")
 
