Upgraded Spring Cloud [Hoxton.RELEASE -> Hoxton.SR1]

--- a/thule-configuration-service/build.gradle
+++ b/thule-configuration-service/build.gradle
@@ -56,7 +56,7 @@ description = "Thule Configuration Service"
 // Dependencies
 dependencyManagement {
     imports {
-        mavenBom("org.springframework.cloud:spring-cloud-dependencies:Hoxton.RELEASE")
+        mavenBom("org.springframework.cloud:spring-cloud-dependencies:Hoxton.SR1")
     }
 }
 
