--- a/thule-email-service/build.gradle
+++ b/thule-email-service/build.gradle
@@ -32,7 +32,7 @@ description = "Thule Email Service"
 // Dependencies
 dependencyManagement {
     imports {
-        mavenBom("org.springframework.cloud:spring-cloud-dependencies:Hoxton.RELEASE")
+        mavenBom("org.springframework.cloud:spring-cloud-dependencies:Hoxton.SR1")
     }
 }
 
