--- a/thule-people-service/build.gradle
+++ b/thule-people-service/build.gradle
@@ -41,7 +41,7 @@ description = "Thule People Service"
 // Dependencies
 dependencyManagement {
     imports {
-        mavenBom("org.springframework.cloud:spring-cloud-dependencies:Hoxton.RELEASE")
+        mavenBom("org.springframework.cloud:spring-cloud-dependencies:Hoxton.SR1")
     }
 }
 
