--- a/thule-shared/build.gradle
+++ b/thule-shared/build.gradle
@@ -37,7 +37,7 @@ subprojects {
     // Dependencies
     dependencyManagement {
         imports {
-            mavenBom("org.springframework.cloud:spring-cloud-dependencies:Hoxton.RELEASE")
+            mavenBom("org.springframework.cloud:spring-cloud-dependencies:Hoxton.SR1")
         }
     }
 }
