--- a/thule-shared/build.gradle
+++ b/thule-shared/build.gradle
@@ -13,7 +13,7 @@ buildscript {
 plugins {
     id "com.github.ben-manes.versions" version "0.27.0"
     id "org.sonarqube" version "2.8" apply(false)
-    id "org.springframework.boot" version "2.2.2.RELEASE" apply(false)
+    id "org.springframework.boot" version "2.2.3.RELEASE" apply(false)
 }
 
 subprojects {
@@ -208,7 +208,7 @@ project("thule-spring-boot-starter-test") {
     dependencies {
         api project(":thule-spring-boot-starter")
         api project(":thule-test")
-        api("org.awaitility:awaitility:4.0.2")
+        api("org.awaitility:awaitility")
         api("org.springframework.boot:spring-boot-starter-test")
     }
 }
