--- a/thule-email-service/build.gradle
+++ b/thule-email-service/build.gradle
@@ -11,7 +11,9 @@ buildscript {
 
 // Plugins
 plugins {
+    id "com.benjaminsproule.swagger" version "1.0.5"
     id "com.github.ben-manes.versions" version "0.27.0"
+    id "io.swagger.swaggerhub" version "1.0.1"
     id "jacoco"
     id "java"
     id "maven-publish"
@@ -43,6 +45,8 @@ dependencies {
     compileOnly("org.projectlombok:lombok")
 
     implementation("uk.co.serin.thule:thule-spring-boot-starter-security-oauth2:${thuleSharedVersion}")
+    implementation("io.springfox:springfox-swagger2:2.9.2")
+    implementation("io.springfox:springfox-swagger-ui:2.9.2")
     implementation("org.jolokia:jolokia-core") // Required for JMX support when using the Admin server
     implementation("org.springframework.boot:spring-boot-starter-actuator")
     implementation("org.springframework.boot:spring-boot-starter-mail")
