Replaced ribbon with spring loadbalancer

--- a/thule-people-service/src/main/resources/config/application.yml
+++ b/thule-people-service/src/main/resources/config/application.yml
@@ -38,6 +38,9 @@ spring:
     kubernetes:
       ribbon:
         mode: service
+    loadbalancer:
+      ribbon:
+        enabled: false
   datasource:
     driver-class-name: net.sf.log4jdbc.DriverSpy
     hikari:
