Replaced ribbon with spring loadbalancer

--- a/thule-gateway-service/src/main/resources/config/application.yml
+++ b/thule-gateway-service/src/main/resources/config/application.yml
@@ -33,6 +33,10 @@ server:
 spring:
   application:
     name: thule-gateway-service
+  cloud:
+    loadbalancer:
+      ribbon:
+        enabled: false
   sleuth:
     sampler:
       probability: 1.0
