--- a/thule-people-service/src/main/resources/config/application.yml
+++ b/thule-people-service/src/main/resources/config/application.yml
@@ -26,6 +26,10 @@ security:
       jwt:
         key-value: secret
 
+# Server configuration
+server:
+  forward-headers-strategy: framework
+
 # Spring boot configuration
 spring:
   application:
