--- a/thule-people-service/src/main/resources/config/application.yml
+++ b/thule-people-service/src/main/resources/config/application.yml
@@ -28,6 +28,7 @@ security:
 
 # Server configuration
 server:
+  # Required so that hateoas links have correct path to resources when using x-forwarded headers via k8s
   forward-headers-strategy: framework
 
 # Spring boot configuration
