--- a/thule-email-service/build.gradle
+++ b/thule-email-service/build.gradle
@@ -19,7 +19,6 @@ plugins {
     id "org.sonarqube" version "2.8"
     id "org.springframework.boot" version "2.2.4.RELEASE"
 }
-apply plugin: "io.spring.dependency-management"
 apply plugin: "uk.co.serin.gradle.plugins.sonarqube-build-breaker"
 
 // Standard Serin gradle plugin config
@@ -30,18 +29,17 @@ apply from: buildscript.classLoader.getResource("uk/co/serin/gradle/scripts/buil
 description = "Thule Email Service"
 
 // Dependencies
-dependencyManagement {
-    imports {
-        mavenBom("org.springframework.cloud:spring-cloud-dependencies:Hoxton.SR1")
-    }
-}
-
+def springBootVersion = "2.2.4.RELEASE"
+def thuleSharedVersion = "1.1.0-SNAPSHOT"
 dependencies {
+    annotationProcessor platform("org.springframework.boot:spring-boot-dependencies:${springBootVersion}")
     annotationProcessor("org.projectlombok:lombok")
     annotationProcessor("org.springframework.boot:spring-boot-configuration-processor")
 
     compileOnly("org.projectlombok:lombok")
 
+    implementation platform("org.springframework.boot:spring-boot-dependencies:${springBootVersion}")
+    implementation platform("org.springframework.cloud:spring-cloud-dependencies:Hoxton.SR1")
     implementation("uk.co.serin.thule:thule-spring-boot-starter-security-oauth2:${thuleSharedVersion}")
     implementation("io.springfox:springfox-swagger2:2.9.2")
     implementation("io.springfox:springfox-swagger-ui:2.9.2")
@@ -61,6 +59,7 @@ dependencies {
     itestImplementation("org.springframework.restdocs:spring-restdocs-mockmvc")
     itestImplementation("org.springframework.security:spring-security-test")
 
+    dtestImplementation platform("org.springframework.boot:spring-boot-dependencies:${springBootVersion}")
     dtestImplementation("uk.co.serin.thule:thule-spring-boot-starter-test:${thuleSharedVersion}")
     dtestImplementation("org.springframework.boot:spring-boot-starter-actuator")
     dtestImplementation("org.springframework.boot:spring-boot-starter-web")
