--- a/thule-people-service/build.gradle
+++ b/thule-people-service/build.gradle
@@ -18,7 +18,6 @@ plugins {
     id "org.sonarqube" version "2.8"
     id "org.springframework.boot" version "2.2.4.RELEASE"
 }
-apply plugin: "io.spring.dependency-management"
 apply plugin: "uk.co.serin.gradle.plugins.sonarqube-build-breaker"
 
 // Standard Serin gradle plugin config
@@ -39,18 +38,17 @@ ctest {
 description = "Thule People Service"
 
 // Dependencies
-dependencyManagement {
-    imports {
-        mavenBom("org.springframework.cloud:spring-cloud-dependencies:Hoxton.SR1")
-    }
-}
-
+def springBootVersion = "2.2.4.RELEASE"
+def thuleSharedVersion = "1.1.0-SNAPSHOT"
 dependencies {
+    annotationProcessor platform("org.springframework.boot:spring-boot-dependencies:${springBootVersion}")
     annotationProcessor("org.projectlombok:lombok")
     annotationProcessor("org.springframework.boot:spring-boot-configuration-processor")
 
     compileOnly("org.projectlombok:lombok")
 
+    implementation platform("org.springframework.boot:spring-boot-dependencies:${springBootVersion}")
+    implementation platform("org.springframework.cloud:spring-cloud-dependencies:Hoxton.SR1")
     implementation("uk.co.serin.thule:thule-spring-boot-starter-data:${thuleSharedVersion}")
     implementation("uk.co.serin.thule:thule-spring-boot-starter-security-oauth2:${thuleSharedVersion}")
     implementation("com.googlecode.log4jdbc:log4jdbc:1.2")
@@ -81,6 +79,7 @@ dependencies {
     ctestImplementation("org.springframework.cloud:spring-cloud-contract-wiremock")
     ctestImplementation("org.springframework.security:spring-security-test")
 
+    dtestImplementation platform("org.springframework.boot:spring-boot-dependencies:${springBootVersion}")
     dtestImplementation("uk.co.serin.thule:thule-spring-boot-starter-test:${thuleSharedVersion}")
     dtestImplementation("org.springframework.boot:spring-boot-starter-actuator")
     dtestImplementation("org.springframework.boot:spring-boot-starter-web")
