--- a/thule-repository-mongodb/build.gradle
+++ b/thule-repository-mongodb/build.gradle
@@ -18,7 +18,6 @@ plugins {
     id "org.sonarqube" version "2.8"
     id "org.springframework.boot" version "2.2.4.RELEASE"
 }
-apply plugin: "io.spring.dependency-management"
 apply plugin: "uk.co.serin.gradle.plugins.sonarqube-build-breaker"
 
 // Standard Serin gradle plugin config
@@ -29,12 +28,16 @@ apply from: buildscript.classLoader.getResource("uk/co/serin/gradle/scripts/buil
 description = "Thule Repository Mongodb"
 
 // Dependencies
+def springBootVersion = "2.2.4.RELEASE"
+def thuleSharedVersion = "1.1.0-SNAPSHOT"
 dependencies {
+    annotationProcessor platform("org.springframework.boot:spring-boot-dependencies:${springBootVersion}")
     annotationProcessor("org.projectlombok:lombok")
     annotationProcessor("org.springframework.boot:spring-boot-configuration-processor")
 
     compileOnly("org.projectlombok:lombok")
 
+    implementation platform("org.springframework.boot:spring-boot-dependencies:${springBootVersion}")
     implementation("uk.co.serin.thule:thule-spring-boot-starter:${thuleSharedVersion}")
     implementation("org.springframework.boot:spring-boot-starter-data-mongodb")
     implementation("org.springframework.boot:spring-boot-starter-validation")
