--- a/thule-email-service/build.gradle
+++ b/thule-email-service/build.gradle
@@ -17,7 +17,7 @@ plugins {
     id "maven-publish"
     id "org.asciidoctor.convert" version "2.4.0"
     id "org.sonarqube" version "2.8"
-    id "org.springframework.boot" version "2.2.4.RELEASE"
+    id "org.springframework.boot" version "${springBootVersion}"
 }
 apply plugin: "uk.co.serin.gradle.plugins.sonarqube-build-breaker"
 
@@ -29,8 +29,6 @@ apply from: buildscript.classLoader.getResource("uk/co/serin/gradle/scripts/buil
 description = "Thule Email Service"
 
 // Dependencies
-def springBootVersion = "2.2.4.RELEASE"
-def thuleSharedVersion = "1.1.0-SNAPSHOT"
 dependencies {
     annotationProcessor platform("org.springframework.boot:spring-boot-dependencies:${springBootVersion}")
     annotationProcessor("org.projectlombok:lombok")
