--- a/thule-people-service/gradle.properties
+++ b/thule-people-service/gradle.properties
@@ -3,3 +3,5 @@ group=uk.co.serin.thule
 version=1.0.0-SNAPSHOT
 nexusHost=pooh
 nexusPort=8081
+springBootVersion=2.2.4.RELEASE
+thuleSharedVersion=1.1.0-SNAPSHOT
