--- a/thule-email-service/build.gradle
+++ b/thule-email-service/build.gradle
@@ -57,8 +57,10 @@ dependencies {
     itestImplementation("org.springframework.restdocs:spring-restdocs-mockmvc")
     itestImplementation("org.springframework.security:spring-security-test")
 
+    ctestImplementation("org.springframework.boot:spring-boot-starter-webflux")
+
     dtestImplementation platform("org.springframework.boot:spring-boot-dependencies:${springBootVersion}")
     dtestImplementation("uk.co.serin.thule:thule-spring-boot-starter-test:${thuleSharedVersion}")
     dtestImplementation("org.springframework.boot:spring-boot-starter-actuator")
-    dtestImplementation("org.springframework.boot:spring-boot-starter-web")
+    dtestImplementation("org.springframework.boot:spring-boot-starter-webflux")
 }
