--- a/thule-people-service/src/dtest/docker/thule-people-service-dtests/docker-compose.yml
+++ b/thule-people-service/src/dtest/docker/thule-people-service-dtests/docker-compose.yml
@@ -13,6 +13,7 @@ services:
       SPRING_ZIPKIN_ENABLED: "false"
       THULE_PEOPLESERVICE_MYSQL_HOST: mysql
       THULE_SHARED_LOGGING_LOGSTASH_ENABLED: "false"
+      THULE_SHARED_OAUTH2_RESOURCESERVER_JWS_ENABLED: "false"
       TZ: Europe/London
     networks:
       - thule-people-service
