--- a/thule-people-service/src/main/resources/config/application-ctest.yml
+++ b/thule-people-service/src/main/resources/config/application-ctest.yml
@@ -6,9 +6,12 @@ spring:
         simple:
           instances:
             thule-email-service:
-              - uri: http://localhost:8080
+              - uri: http://localhost:${wiremock.server.port}
     kubernetes:
       discovery:
+        enabled: false
+    loadbalancer:
+      ribbon:
         enabled: false
   datasource:
     password: thule
@@ -16,6 +19,11 @@ spring:
   flyway:
     password: root
     user: root
+  security:
+    oauth2:
+      resourceserver:
+        jwt:
+          issuer-uri: http://localhost:8080/auth/realms/thule-test
   zipkin:
     enabled: false
 
@@ -28,3 +36,7 @@ thule:
     logging:
       logstash:
         enabled: false
+    oauth2:
+      resourceserver:
+        jws:
+          enabled: false
