--- a/thule-email-service/src/dtest/docker/thule-email-service-dtests/docker-compose.yml
+++ b/thule-email-service/src/dtest/docker/thule-email-service-dtests/docker-compose.yml
@@ -9,6 +9,7 @@ services:
       SPRING_CLOUD_KUBERNETES_DISCOVERY_ENABLED: "false"
       SPRING_ZIPKIN_ENABLED: "false"
       THULE_SHARED_LOGGING_LOGSTASH_ENABLED: "false"
+      THULE_SHARED_OAUTH2_RESOURCESERVER_JWS_ENABLED: "false"
       TZ: Europe/London
     networks:
       - thule-email-service
