--- a/thule-email-service/src/main/resources/config/application-ctest.yml
+++ b/thule-email-service/src/main/resources/config/application-ctest.yml
@@ -16,3 +16,7 @@ thule:
     logging:
       logstash:
         enabled: false
+    oauth2:
+      resourceserver:
+        jws:
+          enabled: false
