Migrate to shared 1.2.0

--- a/thule-gateway-service/src/main/resources/config/application-ctest.yml
+++ b/thule-gateway-service/src/main/resources/config/application-ctest.yml
@@ -19,3 +19,7 @@ thule:
     logging:
       logstash:
         enabled: false
+    oauth2:
+      resourceserver:
+        jws:
+          enabled: false
