--- a/thule-gateway-service/src/main/resources/config/application-itest.yml
+++ b/thule-gateway-service/src/main/resources/config/application-itest.yml
@@ -13,3 +13,7 @@ thule:
     logging:
       logstash:
         enabled: false
+    oauth2:
+      resourceserver:
+        jws:
+          enabled: false
